Changes made to MastodonAPI